# sewing

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  LICENSE  README.md  appveyor.yml
cmake/: linux_i386_toolchain.cmake  unix_i386_toolchain.cmake
include/: sewing.h
src/: sewing.c
test/: sewing_test.c
